syntax = "proto3";
import "v1alpha1/graph.proto";
import "v1alpha1/signature.proto";
package tierkreis.v1alpha1.jobs;

service JobControl {
  rpc RunningJobs (RunningJobsRequest) returns (RunningJobsResponse) {};
  rpc StartJob (StartJobRequest) returns (StartJobResponse) {};
  rpc JobStatus (JobStatusRequest) returns (JobStatusResponse) {};
  rpc StopJob (StopJobRequest) returns (StopJobResponse) {};
  rpc DeleteCompleted(DeleteCompletedRequest) returns (DeleteCompletedResponse);
}

message JobHandle {
  string uuid = 1;
  uint32 attempt_id = 2;
}

message StartJobRequest {
  tierkreis.v1alpha1.graph.Graph graph = 1;
  tierkreis.v1alpha1.graph.StructValue inputs = 2;
  JobHandle job_handle = 3;
}

message StartJobResponse {
  oneof result {
    JobHandle job_handle = 1;
    tierkreis.v1alpha1.signature.TypeErrors type_errors = 2;
    string runtime_error = 3;
  }
}

message RunningJobsRequest {
}

message RunningJobsResponse {
  repeated JobStatus jobs = 1;
}


message StopJobRequest {
  JobHandle handle = 1;
}

message StopJobResponse {
}

message JobStatusRequest {
  JobHandle handle = 1;
}

message JobStatusResponse {
  JobStatus status = 1;
}

// This is supposed to be `google.protobuf.Empty` but unfortunately there is no
// support for this in `betterproto` yet.
message Empty {
}

message JobStatus {
  JobHandle handle = 1;
  oneof status {
    Empty success = 2;
    Empty running = 3;
    string error = 4;
  }
}


message DeleteCompletedRequest {}
message DeleteCompletedResponse {
    // handles of deleted jobs
    repeated JobHandle job_handles = 1;
}